fix form 为json and fix validate
